| Bug #7261 | Alter table loses temp table with lower_case_table_names=2 | ||
|---|---|---|---|
| Submitted: | 14 Dec 2004 13:03 | Modified: | 27 Jan 2005 0:52 |
| Reporter: | Scott Wilson | ||
| Status: | Closed | ||
| Category: | Server: MyISAM | Severity: | S3 (Non-critical) |
| Version: | 4.1.7 | OS: | Mac OS X (OS X Server 10.3) |
| Assigned to: | Ramil Kalimullin | Target Version: | |
[14 Dec 2004 13:03]
Scott Wilson
[14 Dec 2004 13:30]
Victoria Reznichenko
I was able to reproduce it on Windows.
[27 Jan 2005 0:52]
Paul DuBois
Mentioned in 4.1.10 change notes.
