A fix (bug #7261: Alter table loses temp table with lower_case_table_names=2).